--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
       <img
         class="press-logo"
@@ -280,17 +280,11 @@
     <!-- Footer -->
 
     <footer id="footer">
-
+          <h1></h1>
           <a href=""><i class="fa-brands fa-facebook"></i></a>
-
           <a href=""><i class="fa-brands fa-instagram"></i></a>
-
-
           <a href=""><i class="fa-brands fa-twitter"></i></a>
-
-
           <a href=""><i class="fa-brands fa-github"></i></a>
-      </div>
       
       <p>© Copyright 2022 TinDog</p>
       <p>Made by - Vaibahv Bisen</p>
